@@ -19,15 +19,12 @@ package io.dockstore.client.cli;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import io.dockstore.client.cli.nested.ToolClient;
 import io.dockstore.common.CommonTestUtilities;
 import io.dockstore.common.ConfidentialTest;
-import io.dockstore.common.FlushingSystemErrRule;
-import io.dockstore.common.FlushingSystemOutRule;
 import io.dockstore.common.Registry;
 import io.dockstore.common.ToilCompatibleTest;
 import io.dockstore.common.ToolTest;
@@ -38,38 +35,35 @@ import io.swagger.client.api.ContainersApi;
 import io.swagger.client.model.DockstoreTool;
 import io.swagger.client.model.PublishRequest;
 import io.swagger.client.model.Tag;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.contrib.java.lang.system.ExpectedSystemExit;
-import org.junit.contrib.java.lang.system.SystemErrRule;
-import org.junit.contrib.java.lang.system.SystemOutRule;
 import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import uk.org.webcompere.systemstubs.jupiter.SystemStub;
+import uk.org.webcompere.systemstubs.stream.SystemErr;
+import uk.org.webcompere.systemstubs.stream.SystemOut;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static uk.org.webcompere.systemstubs.SystemStubs.catchSystemExit;
 
 /**
  * Extra confidential integration tests, don't rely on the type of repository used (Github, Dockerhub, Quay.io, Bitbucket)
  *
  * @author aduncan
  */
-@Category({ ConfidentialTest.class, ToolTest.class })
+@org.junit.jupiter.api.Tag(ConfidentialTest.NAME)
+@org.junit.jupiter.api.Tag(ToolTest.NAME)
 public class GeneralIT extends BaseIT {
 
-    @Rule
-    public final SystemOutRule systemOutRule = new FlushingSystemOutRule().enableLog().muteForSuccessfulTests();
+    @SystemStub
+    public final SystemOut systemOutRule = new SystemOut();
 
-    @Rule
-    public final SystemErrRule systemErrRule = new FlushingSystemErrRule().enableLog().muteForSuccessfulTests();
+    @SystemStub
+    public final SystemErr systemErrRule = new SystemErr();
 
-    @Rule
-    public final ExpectedSystemExit systemExit = ExpectedSystemExit.none();
-
-    @Before
+    @BeforeEach
     @Override
     public void resetDBBetweenTests() throws Exception {
         CommonTestUtilities.cleanStatePrivate2(SUPPORT, false, testingPostgres);
@@ -79,7 +73,7 @@ public class GeneralIT extends BaseIT {
      * Checks that auto upgrade works and that the dockstore CLI is updated to the latest tag
      * Must be run after class since upgrading before tests may cause them to fail
      */
-    @Ignore
+    @Disabled
     public static void testAutoUpgrade() {
         String installLocation = Client.getInstallLocation();
         String latestVersion = Client.getLatestVersion();
@@ -88,7 +82,7 @@ public class GeneralIT extends BaseIT {
         String currentVersion = Client.getCurrentVersion();
 
         if (installLocation != null && latestVersion != null && currentVersion != null) {
-            Assert.assertEquals("Dockstore CLI should now be up to date with the latest stable tag.", currentVersion, latestVersion);
+            assertEquals(currentVersion, latestVersion, "Dockstore CLI should now be up to date with the latest stable tag.");
         }
     }
 
@@ -107,52 +101,55 @@ public class GeneralIT extends BaseIT {
      * This tests that attempting to launch a CWL tool locally, where no file exists, an IOError will occur
      */
     @Test
-    public void testLocalLaunchCWLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
-            "imnotreal.cwl", "--json", "filtercount-job.json", "--script" });
+    public void testLocalLaunchCWLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
+                        "imnotreal.cwl", "--json", "filtercount-job.json", "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * This tests that attempting to launch a WDL tool locally, where no file exists, an IOError will occur
      */
     @Test
-    public void testLocalLaunchWDLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
-            "imnotreal.wdl", "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" });
+    public void testLocalLaunchWDLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--local-entry",
+                        "imnotreal.wdl", "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * This tests that attempting to launch a CWL tool remotely, where no file exists, an APIError will occur
      */
     @Test
-    public void testRemoteLaunchCWLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.IO_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry", "imnotreal.cwl",
-                "--json", "imnotreal-job.json", "--script" });
+    public void testRemoteLaunchCWLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry",
+                        "imnotreal.cwl", "--json", "imnotreal-job.json", "--script" }));
+        assertEquals(Client.IO_ERROR, exitCode);
     }
 
     /**
      * This tests that attempting to launch a WDL tool remotely, where no file exists, an APIError will occur
      */
     @Test
-    public void testRemoteLaunchWDLNoFile() {
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry", "imnotreal.wdl",
-                "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" });
+    public void testRemoteLaunchWDLNoFile() throws Exception {
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "launch", "--entry", "imnotreal.wdl",
+                        "--json", "imnotreal-job.json", "--descriptor", "wdl", "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * Checks that you can't add/remove labels unless they all are of proper format
      */
     @Test
-    public void testLabelIncorrectInput() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--add", "docker-hub", "--add", "quay.io", "--script" });
+    public void testLabelIncorrectInput() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "label", "--entry",
+                        "quay.io/dockstoretestuser2/quayandgithub", "--add", "docker-hub", "--add", "quay.io", "--script" }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
@@ -172,12 +169,12 @@ public class GeneralIT extends BaseIT {
             "quay.io/dockstoretestuser2/quayandgithubalternate", "--remove", "github", "--script" });
 
         final long count = testingPostgres.runSelectStatement("select count(*) from entry_label where entryid = '2'", long.class);
-        assertEquals("there should be 2 labels for the given container, there are " + count, 2, count);
+        assertEquals(2, count, "there should be 2 labels for the given container, there are " + count);
 
         final long count2 = testingPostgres.runSelectStatement(
             "select count(*) from label where value = 'quay' or value = 'github' or value = 'dockerhub' or value = 'alternate'",
             long.class);
-        assertEquals("there should be 4 labels in the database (No Duplicates), there are " + count2, 4, count2);
+        assertEquals(4, count2, "there should be 4 labels in the database (No Duplicates), there are " + count2);
     }
 
     /**
@@ -194,7 +191,7 @@ public class GeneralIT extends BaseIT {
             "select count(*) from tag,tool where tool.registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and tool.namespace = 'dockstoretestuser2' and tool.name = 'quayandgithub' and tool.toolname IS NULL and tool.id=tag.parentid and valid = 'f'",
             long.class);
-        assertEquals("there should now be an invalid tag, found " + count, 1, count);
+        assertEquals(1, count, "there should now be an invalid tag, found " + count);
 
         Client.main(
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
@@ -205,30 +202,30 @@ public class GeneralIT extends BaseIT {
             "select count(*) from tag,tool where tool.registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and tool.namespace = 'dockstoretestuser2' and tool.name = 'quayandgithub' and tool.toolname IS NULL and tool.id=tag.parentid and valid = 'f'",
             long.class);
-        assertEquals("the invalid tag should now be valid, found " + count2, 0, count2);
+        assertEquals(0, count2, "the invalid tag should now be valid, found " + count2);
     }
 
     /**
      * Test trying to remove a tag for auto build
      */
     @Test
-    public void testVersionTagRemoveAutoContainer() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "remove", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--script" });
+    public void testVersionTagRemoveAutoContainer() throws Exception {
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "remove", "--entry",
+                        "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--script" }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
      * Test trying to add a tag for auto build
      */
     @Test
-    public void testVersionTagAddAutoContainer() {
-        systemExit.expectSystemExitWithStatus(Client.CLIENT_ERROR);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "add", "--entry",
-                "quay.io/dockstoretestuser2/quayandgithub", "--name", "masterTest", "--image-id",
-                "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", "--script" });
+    public void testVersionTagAddAutoContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "add", "--entry",
+                        "quay.io/dockstoretestuser2/quayandgithub", "--name", "masterTest", "--image-id",
+                        "4728f8f5ce1709ec8b8a5282e274e63de3c67b95f03a519191e6ea675c5d34e8", "--git-reference", "master", "--script" }));
+        assertEquals(Client.CLIENT_ERROR, exitCode);
     }
 
     /**
@@ -249,9 +246,8 @@ public class GeneralIT extends BaseIT {
         final long count = testingPostgres.runSelectStatement(
             " select count(*) from  tag, tool where tag.parentid = tool.id and giturl ='git@github.com:dockstoretestuser2/quayandgithubalternate.git' and toolname = 'alternate'",
             long.class);
-        assertEquals(
-            "there should be 3 tags, 2  that are autogenerated (master and latest) and the newly added masterTest tag, found " + count, 3,
-            count);
+        assertEquals(3, count,
+                "there should be 3 tags, 2  that are autogenerated (master and latest) and the newly added masterTest tag, found " + count);
 
     }
 
@@ -265,14 +261,14 @@ public class GeneralIT extends BaseIT {
                 "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "true", "--script" });
         final long count = testingPostgres
             .runSelectStatement("select count(*) from tag t, version_metadata vm where vm.hidden = 't' and t.id = vm.id", long.class);
-        assertEquals("there should be 1 hidden tag", 1, count);
+        assertEquals(1, count, "there should be 1 hidden tag");
 
         Client.main(
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "version_tag", "update", "--entry",
                 "quay.io/dockstoretestuser2/quayandgithub", "--name", "master", "--hidden", "false", "--script" });
         final long count2 = testingPostgres
             .runSelectStatement("select count(*) from tag t, version_metadata vm where vm.hidden = 't' and t.id = vm.id", long.class);
-        assertEquals("there should be 0 hidden tag", 0, count2);
+        assertEquals(0, count2, "there should be 0 hidden tag");
     }
 
     /**
@@ -296,17 +292,18 @@ public class GeneralIT extends BaseIT {
                 "quay.io/dockstoretestuser2/quayandgithub/alternate", "--name", "masterTest", "--script" });
 
         final long count = testingPostgres.runSelectStatement("select count(*) from tag where name = 'masterTest'", long.class);
-        assertEquals("there should be no tags with the name masterTest", 0, count);
+        assertEquals(0, count, "there should be no tags with the name masterTest");
     }
 
     /**
      * Check that refreshing an incorrect individual container won't work
      */
     @Test
-    public void testRefreshIncorrectContainer() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
-            "quay.io/dockstoretestuser2/unknowncontainer", "--script" });
+    public void testRefreshIncorrectContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
+                        "quay.io/dockstoretestuser2/unknowncontainer", "--script" }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
@@ -323,7 +320,7 @@ public class GeneralIT extends BaseIT {
         Client.main(
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "convert", "entry2json", "--entry",
                 "quay.io/dockstoretestuser2/quayandgithubwdl", "--descriptor", "wdl", "--script" });
-        Assert.assertTrue(systemOutRule.getLog().contains("\"test.hello.name\": \"String\""));
+        assertTrue(systemOutRule.getText().contains("\"test.hello.name\": \"String\""));
     }
 
     @Test
@@ -334,14 +331,14 @@ public class GeneralIT extends BaseIT {
         boolean published = testingPostgres.runSelectStatement(
             "select ispublished from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
                 + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithubwdl';", boolean.class);
-        assertTrue("tool not published", published);
+        assertTrue(published, "tool not published");
 
         Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--entry",
             "quay.io/dockstoretestuser2/quayandgithubwdl", "--entryname", "foo" });
 
         long count = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithubwdl';", long.class);
-        assertEquals("should be two after republishing", 2, count);
+        assertEquals(2, count, "should be two after republishing");
 
         Client.main(
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "publish", "--unpub", "--entry",
@@ -385,10 +382,11 @@ public class GeneralIT extends BaseIT {
      * Check that a user can't refresh another users container
      */
     @Test
-    public void testRefreshOtherUsersContainer() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
-            "quay.io/test_org/test1", "--script" });
+    public void testRefreshOtherUsersContainer() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "refresh", "--entry",
+                        "quay.io/test_org/test1", "--script" }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
@@ -410,17 +408,18 @@ public class GeneralIT extends BaseIT {
      * Tests that attempting to get a WDL file when none exists won't work
      */
     @Test
-    public void testGetWdlFailure() {
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "wdl", "--entry",
-            "quay.io/dockstoretestuser2/quayandgithub", "--script" });
+    public void testGetWdlFailure() throws Exception {
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "wdl", "--entry",
+                        "quay.io/dockstoretestuser2/quayandgithub", "--script" }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
      * Tests that a user can only add Quay containers that they own directly or through an organization
      */
     @Test
-    public void testUserPrivilege() {
+    public void testUserPrivilege() throws Exception {
         // Repo user has access to
         Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
             Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser2", "--name", "quayandgithub", "--git-url",
@@ -428,7 +427,7 @@ public class GeneralIT extends BaseIT {
             "--cwl-path", "/testDir/Dockstore.cwl", "--dockerfile-path", "/testDir/Dockerfile", "--script" });
         final long count = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstoretestuser2' and name = 'quayandgithub' and toolname = 'testTool'", long.class);
-        assertEquals("the container should exist", 1, count);
+        assertEquals(1, count, "the container should exist");
 
         // Repo user is part of org
         Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
@@ -437,14 +436,14 @@ public class GeneralIT extends BaseIT {
             "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", "--script" });
         final long count2 = testingPostgres.runSelectStatement("select count(*) from tool where registry = '" + Registry.QUAY_IO.getDockerPath()
             + "' and namespace = 'dockstore2' and name = 'testrepo2' and toolname = 'testOrg'", long.class);
-        assertEquals("the container should exist", 1, count2);
+        assertEquals(1, count2, "the container should exist");
 
         // Repo user doesn't own
-        systemExit.expectSystemExitWithStatus(Client.API_ERROR);
-        Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
-            Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser", "--name", "testrepo", "--git-url",
-            "git@github.com:dockstoretestuser/quayandgithub.git", "--git-reference", "master", "--toolname", "testTool", "--cwl-path",
-            "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", "--script" });
+        int exitCode = catchSystemExit(() -> Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "manual_publish", "--registry",
+                Registry.QUAY_IO.name(), "--namespace", "dockstoretestuser", "--name", "testrepo", "--git-url",
+                "git@github.com:dockstoretestuser/quayandgithub.git", "--git-reference", "master", "--toolname", "testTool", "--cwl-path",
+                "/Dockstore.cwl", "--dockerfile-path", "/Dockerfile", "--script" }));
+        assertEquals(Client.API_ERROR, exitCode);
     }
 
     /**
@@ -478,7 +477,7 @@ public class GeneralIT extends BaseIT {
         } catch (ApiException ex) {
             success = false;
         } finally {
-            assertFalse("User does not have access to tool.", success);
+            assertFalse(success, "User does not have access to tool.");
         }
         // Other user: Should fail
         success = true;
@@ -487,7 +486,7 @@ public class GeneralIT extends BaseIT {
         } catch (ApiException ex) {
             success = false;
         } finally {
-            assertFalse("User does not have access to tool.", success);
+            assertFalse(success, "User does not have access to tool.");
         }
 
         // Publish
@@ -509,17 +508,17 @@ public class GeneralIT extends BaseIT {
             refresh.getToolPath() + ":" + tag.getName(), "--zip", "--script" });
         File downloadedZip = new File(new ToolClient(null, false).zipFilename(refresh));
         // record entries
-        List<String> collect = new ZipFile(downloadedZip).stream().map(ZipEntry::getName).collect(Collectors.toList());
-        assert (downloadedZip.exists());
-        assert (downloadedZip.delete());
+        List<String> collect = new ZipFile(downloadedZip).stream().map(ZipEntry::getName).toList();
+        assertTrue(downloadedZip.exists());
+        assertTrue(downloadedZip.delete());
 
         // download and unzip via CLI while at it
         Client.main(new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "tool", "download", "--entry",
             refresh.getToolPath() + ":" + tag.getName(), "--script" });
         collect.forEach(entry -> {
             File innerFile = new File(System.getProperty("user.dir"), entry);
-            assert (innerFile.exists());
-            assert (innerFile.delete());
+            assertTrue(innerFile.exists());
+            assertTrue(innerFile.delete());
         });
     }
 
